# chestnut-64

./: .dir-locals.el  CMakeLists.txt  build.ninja  config.ninja  configure  gen-iso.sh  linker.ld
isofiles/boot/grub/: grub.img
kern/: .clang_complete  acpi.cc  acpi.h  acpi_support.cc  acpi_support.h  apic.cc  apic.h  boot.asm  common.h  console.cc  console.h  cpu.cc  cpu.h  io-ports.h  irqs.cc  irqs.h  kvm-clock.cc  main.cc  multiboot2.h  page-table.cc  page-table.h  scheduler.cc  scheduler.h  smp-boot.asm  terminal.cc  terminal.h  thread.cc  thread.h
kern/acpica/include/platform/: acenv.h
kern/libc/: common.h  ctype.h  cxxrt.cc  limits.h  list.h  stdarg.h  string.c  string.h  vector.cc  vector.h
kern/mm/: allocator.cc  allocator.h  uslab.cc  uslab.h
kern/x64/: acpi-x64.cc  acpi-x64.h  cpu-x64.cc  cpu-x64.h  hpet-x64.cc  hpet-x64.h  io-x64.h  ioapic-x64.cc  ioapic-x64.h  irqs-x64.cc  irqs-x64.h  kvm-clock.cc  kvm-clock.h  local-apic-x64.cc  local-apic-x64.h  page-table-x64.cc  page-table-x64.h  platform-x64.h
tools/: gen_binutils.sh  gen_rust.sh
